[tool.poetry]
name = "geocovid"
version = "0.1.0"
description = ""
authors = ["Ariel Wolfmann <ariel.wolfmann@rappi.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Mesa = "^0.8.9"
mesa-geo = "^0.2.0"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
