[tool.poetry]
name = "geocovid"
version = "0.1.0"
description = ""
authors = ["Ariel Wolfmann <awolfmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Mesa = "^0.8.9"
mesa-geo = "^0.2.0"
geopandas = "^0.9.0"
jupyter = "^1.0.0"
jupyterlab = "^3.1.4"
matplotlib = "^3.4.2"
pyarrow = "^5.0.0"
ipython = "^7.26.0"
traitlets = "^5.0.5"
ipykernel = "^6.0.3"
line-profiler = "^3.3.0"
pyspark = "^3.0.0"
apache-sedona = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
