[tool.poetry]
name = "geocovid"
version = "0.1.0"
description = ""
authors = ["Ariel Wolfmann <awolfmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Mesa = "^0.8.9"
mesa-geo = "^0.2.0"
geopandas = "^0.9.0"
jupyter = "^1.0.0"
jupyterlab = "^3.1.4"
matplotlib = "^3.4.2"
pyarrow = "^5.0.0"
ipython = "^7.26.0"
traitlets = "^5.0.5"
ipykernel = "^6.0.3"
line-profiler = "^3.3.0"
pyspark = "^3.0.0"
apache-sedona = "^1.0.1"
plotly = "^5.2.1"
folium = "^0.12.1"
gprof2dot = "^2021.2.21"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "6.2.3"
pre-commit = "2.2.0"
isort = "5.8.0"
flake8 = "3.7.8"
pytest-cov = "2.11.1"
pytest-xdist = "2.2.1"
pylint = "2.7.4"
pdbpp = "0.10.2"
black = "19.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = "arguments-differ"
